@@ -1,5 +1,13 @@
 # ChangeLog for schedule
 
+*schedule-4.1:
+	Martin Väth <martin at mvath.de>:
+	- Fix exit status reporting (regression of schedule-4.0)
+	- start/queue: print job address and exit status to stdout unless quiet
+	- Split job list arguments
+	- Slightly reorganize modules
+	- zsh-completion: fix --file
+
 *schedule-4.0:
 	Martin Väth <martin at mvath.de>:
 	- Split into modules to minimize memory footprint
